# vexometer

./: .gitignore  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  AI.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  Justfile  NAMING.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  ROADMAP.md  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  URGENT-RESCRIPT-MIGRATION.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.github/: PROVEN-INTEGRATION.md  dependabot.yml
.github/workflows/: ada-spark-ci.yml  codeql.yml  guix-nix-policy.yml  instant-sync.yml  jekyll-gh-pages.yml  npm-bun-blocker.yml  quality-gates.yml  quality.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/self-validating/: README.adoc
.machine_readable/svc/: README.adoc
.well-known/groove/: manifest.json
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: METRICS.adoc  SATELLITES.adoc  tech-debt-2026-05-26.md
docs/accessibility/: README.adoc
docs/compliance/: ACCESSIBILITY.adoc
lazy-eliminator/: .gitignore  AI.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.toml  Justfile  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
lazy-eliminator/.github/workflows/: cflite_batch.yml  cflite_pr.yml
lazy-eliminator/benches/: detection_bench.rs
lazy-eliminator/contractiles/must/: Mustfile
lazy-eliminator/contractiles/trust/: Trustfile.a2ml
lazy-eliminator/docs/: CITATIONS.adoc
lazy-eliminator/fuzz/fuzz_targets/: fuzz_main.rs
lazy-eliminator/src/: analyzer.rs  config.rs  detection.rs  language.rs  lib.rs  main.rs  patterns.rs  trace.rs
lazy-eliminator/src/abi/: Foreign.idr
lazy-eliminator/tests/: aspect_test.rs  e2e_test.rs  property_test.rs
satellite-template/: .gitattributes  .gitignore  AI.a2ml  Justfile  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
satellite-template/contractiles/: README.adoc
satellite-template/docs/: CITATIONS.adoc
satellite-template/src/: intervention.ads
satellite-template/tests/: test_intervention.adb
satellite-template/vexometer/: EFFICACY.adoc
src/: vexometer-rci.ads
vexometer/: .editorconfig  .gitignore  .gitlab-ci.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  Justfile  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  alire.toml  humans.txt  vexometer.gpr
vexometer-satellites/: AI.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
vexometer-satellites/docs/: CITATIONS.adoc
vexometer/.claude/: CLAUDE.md
vexometer/.github/: PROVEN-INTEGRATION.md
vexometer/config/: verisim-profile.env
vexometer/contractiles/: README.adoc
vexometer/docs/: CITATIONS.adoc  METRICS.adoc  (+3 more)
vext/: .gitignore  .gitlab-ci.yml  .tool-versions  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  CHANGELOG.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT-AND-PUSH.sh  CONTRIBUTING.md  Cargo.toml  Containerfile  DOCUMENTATION_INDEX.md  FEATURES.md  INSTALLATION_GUIDE.md  Justfile  MAINTAINERS.md  Mustfile  PROJECT_OVERVIEW.md  README.adoc  REPO-CONTENTS.md  RESEARCH_SUMMARY.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.md  RSR_OUTLINE.adoc  SECURITY.md  TECHNOLOGY_STACK.md  USAGE_GUIDE.md  config.ncl  eclexiaiser.toml
vext-email-gateway/: AI.a2ml  CODE_OF_CONDUCT.md  Cargo.toml  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
vext-email-gateway/.github/workflows/: cflite_batch.yml  cflite_pr.yml
vext-email-gateway/contractiles/: README.adoc
vext-email-gateway/contractiles/k9/examples/: setup-repo.k9.ncl
vext-email-gateway/contractiles/must/: Mustfile
vext-email-gateway/contractiles/trust/: Trustfile.a2ml
vext-email-gateway/docs/: CITATIONS.adoc
vext-email-gateway/fuzz/fuzz_targets/: fuzz_main.rs
vext-email-gateway/src/: main.rs  types.rs
vext-email-gateway/src/abi/: Foreign.idr
vext/.claude/: CLAUDE.md
vext/.clusterfuzzlite/: Containerfile  build.sh  project.yaml
vext/.github/: dependabot.yml
vext/.github/ISSUE_TEMPLATE/: custom.md
vext/.github/workflows/: aur-publish.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  container.yml  generator-generic-ossf-slsa3-publish.yml  hypatia-scan.yml  jekyll-gh-pages.yml  language-policy.yml  mirror.yml  release.yml  scorecard.yml  stress-test.yml
vext/.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
vext/.migration/: PYTHON_TO_RUST_RESCRIPT.md
vext/.well-known/: ai.txt  humans.txt  security.txt
vext/api/v/: vext.v
vext/aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
vext/benches/: vext_bench.rs
vext/contractiles/must/: Mustfile
vext/contractiles/trust/: Trustfile.a2ml
vext/docs/: CITATIONS.adoc  conference-materials.md
vext/fuzz/: Cargo.toml
vext/fuzz/fuzz_targets/: fuzz_command_parsing.rs  fuzz_git_operations.rs
vext/governance/: PROJECT_GOVERNANCE.md
vext/locales/: en-US.ftl  es-ES.ftl  fr-FR.ftl
vext/man/: vext-send.1  vextd.1
vext/papers/: tpcf-graduated-trust.md
vext/src/abi/: Foreign.idr  Types.idr
vext/vext-core/: Cargo.toml
vext/vext-core/src/: config.rs  error.rs  groove.rs  i18n.rs  irc_client.rs  lib.rs  listener.rs  main.rs  pandoc.rs  pool.rs  protocol.rs  spellcheck.rs
vext/vext-core/tests/: integration.rs
vext/vext-tools/: deno.json
vext/vext-tools/src/: Mod.res
vext/vext-tools/src/bindings/: Deno.res  Std.res
vext/vext-tools/src/hooks/: Git.res  Install.res
(+69 files in other folders)
