# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vex-lazy-eliminator"
version = "0.1.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
edition = "2021"
license = "PMPL-1.0-or-later"
description = "Completeness enforcement for LLM-generated code - reduces CII and LPS metrics"
homepage = "https://github.com/hyperpolymath/vex-lazy-eliminator"
repository = "https://github.com/hyperpolymath/vex-lazy-eliminator"
readme = "README.adoc"
keywords = ["llm", "code-quality", "completeness", "vexometer"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
regex = "1.11"
thiserror = "2.0"
anyhow = "1.0"
walkdir = "2.5"
toml = "0.8"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bin]]
name = "vex-lazy-eliminator"
path = "src/main.rs"

[lib]
name = "vex_lazy_eliminator"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
