# SPDX-License-Identifier: MPL-2.0
# vext - IRC notification daemon (Rhodium Standard Edition)

[workspace]
resolver = "2"
members = [
    "vext-core",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Vext Contributors"]
license = "MPL-2.0"
repository = "https://github.com/Hyperpolymath/vext"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
