# SPDX-License-Identifier: PMPL-1.0-or-later
# vext-core - Rust IRC notification daemon
# Rhodium Standard Edition

[package]
name = "vext-core"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "High-performance IRC notification daemon for version control systems"
repository = "https://github.com/Hyperpolymath/vext"
keywords = ["irc", "git", "notifications", "ci", "devops"]
categories = ["development-tools", "network-programming"]
readme = "../README.adoc"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# IRC protocol
irc = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS support
native-tls = "0.2"
tokio-native-tls = "0.3"
openssl-sys = "0.9"

# DNS resolution (SRV records) — renamed from trust-dns-resolver
hickory-resolver = "0.24"

# Document processing (optional)
pandoc = { version = "0.8", optional = true }

# Spell checking (optional)
hunspell-rs = { version = "0.4", optional = true }

# Internationalization (optional)
fluent = { version = "0.16", optional = true }
fluent-bundle = { version = "0.15", optional = true }
unic-langid = { version = "0.9", optional = true }

[features]
default = []
full = ["pandoc-support", "spell-check", "i18n"]
pandoc-support = ["dep:pandoc"]
spell-check = ["dep:hunspell-rs"]
i18n = ["dep:fluent", "dep:fluent-bundle", "dep:unic-langid"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "vextd"
path = "src/main.rs"

[[bin]]
name = "vext-send"
path = "src/bin/send.rs"

# Packaging metadata for cargo-deb
[package.metadata.deb]
maintainer = "hyperpolymath <packages@hyperpolymath.dev>"
copyright = "2025, hyperpolymath"
license-file = ["../LICENSE.txt", "0"]
extended-description = """
Vext is a high-performance IRC notification daemon for version control systems.
It monitors git repositories and sends real-time notifications to IRC channels
when commits, merges, and other events occur.
"""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/vextd", "usr/bin/", "755"],
    ["target/release/vext-send", "usr/bin/", "755"],
    ["../README.adoc", "usr/share/doc/vext/README.adoc", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/vextd", dest = "/usr/bin/vextd", mode = "755" },
    { source = "target/release/vext-send", dest = "/usr/bin/vext-send", mode = "755" },
]
